--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -23,7 +23,7 @@
   .card.active {
 	transform: translateY(-15px) scale(1.05);
 	box-shadow: 10 10px 10px rgba(255, 255, 255);
-	border: 2px solid #88e788;
+	border: 2px solid #fff;
 	opacity: 0.9;
   }
   
