--- a/src/css/AnimatedProgressBar.css
+++ b/src/css/AnimatedProgressBar.css
@@ -3,7 +3,6 @@
 		margin-bottom: 50px;
 	}
 	.progress-bar-container h2 {
-		font-family: Arial, Helvetica, sans-serif;
 		color: #eee;
 		letter-spacing: 1px;
 		font-size: 20px;
@@ -13,7 +12,7 @@
 		height: 100%;
 		/*background-color:  #40E0D0;*/
 		border-radius: 5px;
-		animation: progress 2000ms ease-in 1;
+		animation: progress 5s ease-in 1;
 		font-size: 0.8rem;
 	}
 	.progress-bar {
