--- a/src/css/Skill.css
+++ b/src/css/Skill.css
@@ -1,7 +1,7 @@
 .skill-container {
 	width: 100px;
 	height: 80px;
-	background-color: rgba(153,153,153,0.2);
+	background-color: #c1c1c1;
 	padding: 5px;
 	border-radius: 10px;
 	display: flex;
@@ -9,6 +9,7 @@
 	justify-content: space-around;
 }
 .skill-component {
-	background-color: rgba(198, 197, 197, 0.5);
-	padding: 20px;
+	background-color: rgba(230, 230, 230, 0.5);
+	padding-left: 20px;
+	padding-bottom: 10px;
 }
